css/main.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  background-color: #FFF;
  font: 1.1em 'Lato', Helvetica, Arial, sans-serif;
  line-height: 1.5;
}

h1, h2, h3 {
  font-family: 'Lato', Helvetica, Arial;
  font-weight: 400;
  margin-bottom: -0.5em;
}

h1 {
  margin: .16em 0 0 0;
  font-weight: 300;
  line-height: 1.3;
}

header > h1 {
  font-size: 5em;
  margin-top: 0.18em;
}

article > h1 {
  text-align: right;
  font-size: 3.5em;
  margin-top: 0.72em;
  border-right: 3px solid black;
  margin-right: -16px;
  padding-right: 16px;
}

p { margin: 1em 0; }

a {
  color: #000;
}
a:hover {
  color: #000;
}
a:visited {
  color: #000;
}
a:visited:hover {
  color: #000;
}

table {
  font-size: inherit;
  font: 100%;
}

/*****************************************************************************/
/* Home */

#posts {
  text-align: right;
}

ul.posts {
  list-style-type: none;
  margin: 0em;
}

ul.posts li {
  line-height: 2;
  position: relative;
  display: inline-block;
  margin-bottom: 2px;
  z-index: 0;
}

li > a {
  text-decoration: none;
}

time {
  color: #777;
  font-weight: 300;
  font-size: 0.8em;
  padding-right: .3em;
}

.border {
  top: 0px;
  position: absolute;
  right: -15px;
  border-right: 3px solid;
  height: 100%;
  z-index: -1;
  width: 0%;
  transition: width 0.1s;
  -moz-transition: width 0.1s;
  -o-transition: width 0.1s;
}

li a:hover + .border {
  width: 100%;
  padding-left: 1.5em;
}

/*****************************************************************************/
/* Content */

body > article {
  padding: 0 .8em;
  margin-bottom: 2em;
}

main {
  padding: 1em 0 5em 0;
}

/*****************************************************************************/
/* Sidebar */
aside {
  padding: 0 .8em .8em .8em;
}

aside > h1 {
  padding: 1.5em 0 0 0;
  margin-bottom: 0em;
  font-size: 1.25em;
  color: #777;
  font-weight: 300;
}

aside h1 a,
aside h1 a:visited,
aside h1 a:visited:hover,
aside h1 a:hover {
  color: #777;
  font-weight: 300;
}

aside a {
  font-weight: bold;
  text-decoration: none;
}

/*****************************************************************************/
/* Posts */

/* standard */
.highlight {
  overflow-y: scroll;
}

pre {
  padding: 1em;
}

#post ul, #post ol {
  margin-left: 1.35em;
}

#post time {
  display: block;
  text-align: right;
}

/* terminal */
#post pre.terminal {
  border: 1px solid #000;
  //background-color: #333;
  color: #FFF;
}

#post pre.terminal code {
  background-color: #333;
}

/*****************************************************************************/
/* Responsive */

/* max-width: infinite */

@media screen and (min-width: 780px) {
  body > article {
    position: absolute;
    left: 0;
    right: 13.6em;
    min-height: 100%;
    border-right: 1px solid #cfcfcf;
    padding-right: 15px;
  }

  #posts {
  }

  #post {
    //max-width: 40.5em;
    //padding: 0 1%;
  }

  aside {
    position: absolute;
    right: 0;
    width: 12em;
    padding-left: .8em;
  }

  .border {
    right: -16px;
  }

  li > a {
    padding-right: 0em;
  }

  aside > h1 {
    padding-top: 3.7em;
  }
}

@media screen and (min-width: 1000px) {
  body > article {
    width: 40.5em;
  }
  aside {
    left: 42.3em;
  }
}

@media screen and (min-width: 1220px) {
  body > article {
    left: auto;
    right: 38.3%;
  }
  aside {
    left: 61.8%;
  }
}

